force-app/main/default/objects/clofor_com_cfs__ConnectPurchasingInvoiceCash__c/fields/clofor_com_cfs__Cashbook__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cashbook__c</fullName>
    <label>CASH BOOK</label>
    <referenceTo>clofor_com_cfs__CASH_BOOK__c</referenceTo>
    <relationshipName>CONNECT_PURCHASING_INVOICE_AND_CASH</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>