force-app/main/default/objects/clofor_com_cfs__ConnectPurchasingInvoiceCash__c/fields/clofor_com_cfs__PurchasingInvoice__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingInvoice__c</fullName>
    <label>PURCHASING INVOICE</label>
    <referenceTo>clofor_com_cfs__PurchasingInvoice__c</referenceTo>
    <relationshipName>CONNECT_PURCHASING_INVOICE_AND_CASH</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>