force-app/main/default/objects/clofor_com_cfs__ConnectPurchasingInvoiceCash__c/fields/clofor_com_cfs__UnpaidBalancePurchasingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePurchasingLocal__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoice__r.clofor_com_cfs__UnpaidBalanceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>